[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
httpc-test = "0.1.1"
reqwest = { version = "*", features = ["json"] }
tui-textarea = "0.4"
tokio = { version = "1.33", features = ["full"] }

